[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dskit-cli"
version = "1.0.0"
description = "A fast, multi-language CLI utility belt for data scientists"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["data science", "cli", "csv", "parquet", "profiling", "statistics"]
dependencies = [
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "openpyxl>=3.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
profile = ["ydata-profiling>=4.0.0"]
dev = ["pytest", "black", "ruff", "mypy"]

[project.scripts]
dskit = "dskit.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/dskit"
Repository = "https://github.com/yourusername/dskit"
Issues = "https://github.com/yourusername/dskit/issues"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
